--- a/blocks/cards-testimonial/cards-testimonial.css
+++ b/blocks/cards-testimonial/cards-testimonial.css
@@ -20,11 +20,11 @@
 }
 
 .cards-testimonial .grid-cards > .cards-card {
-  max-width: 326px;
+  max-width: 350px;
   background-color: var(--color-gray-300);
   border-radius: 20px;
   box-shadow: 0 4px 8px 2px rgb(37 36 59 / 15%);
-  padding: 34px 20px;
+  padding: 25px 20px;
   box-sizing: border-box;
   color: var(--color-white);
 }
@@ -114,7 +114,7 @@
 }
 
 .cards-testimonial .cards-card-body .testimonial-date {
-  font-size: var(--body-font-size-xs);
+  font-size: var(--body-font-size-xxs);
   line-height: 1.5;
   text-align: left;
 }
@@ -166,7 +166,7 @@
   }
 
   .cards-testimonial.swiper .swiper-slide {
-    max-width: 326px;
+    max-width: 350px;
   }
 }
 
@@ -188,7 +188,7 @@
   background-color: var(--color-gray-300);
   border-radius: 20px;
   box-shadow: 0 4px 8px 2px rgb(37 36 59 / 15%);
-  padding: 34px 20px;
+  padding: 20px 20px;
   flex-direction: column;
   margin-right: 0;
   box-sizing: border-box;
