Enhance testimonial card styles with font size and height adjustments
- Added var(--body-font-size-xs); to line 102ish
- Added min-height of 350px to .cards-testimonial.swiper .swiper-slide

--- a/blocks/cards-testimonial/cards-testimonial.css
+++ b/blocks/cards-testimonial/cards-testimonial.css
@@ -102,6 +102,8 @@
 .cards-testimonial .cards-card-body p:has(.icon-star) {
   display: flex;
   margin: 0 0 var(--spacing-xs);
+  font-size: var(--body-font-size-xs);
+
 }
 
 .cards-testimonial .cards-card-body .icon-star,
@@ -165,8 +167,9 @@
     margin-right: auto;
   }
 
-  .cards-testimonial.swiper .swiper-slide {
+  .cards-testimonial.swiper .swiper-slide { to 
     max-width: 350px;
+    min-height: 350px;
   }
 }
 
