--- a/blocks/anchor-nav/anchor-nav.css
+++ b/blocks/anchor-nav/anchor-nav.css
@@ -110,9 +110,9 @@
   .anchor-nav-link.button::after {
     content: '';
     position: absolute;
-    left: 14px;
-    bottom: -9px;
-    width: 80%;
+    left: 0;
+    bottom: -18px;
+    width: 100%;
     height: 2.5px;
     background-color: var(--text-red-color);
     transform: scaleX(0);
